# stl

./: stl.cabal
examples/: sphere.stl
src/: main.hs  parse.hs  types.hs
