name:                stl
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matt Neary
maintainer:          neary.matt@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable stl
  main-is:             main.hs
  build-depends:       base ==4.6.*,
                       bytestring ==0.10.0.*,
                       text ==0.11.3.*,
                       data-binary-ieee754 ==0.4.4,
                       binary ==0.7.2.*,
                       filepath ==1.4.0.*,
                       directory ==1.2.2.*
  hs-source-dirs:      src
